# ukg_stuff

./: README.md
java/example/: .project  Makefile  settings.gradle
java/example/app/: .factorypath  .project  build.gradle
java/example/app/src/main/java/org/annoatations/: Doer.java
java/example/app/src/main/java/org/example/: Classes.java  Methods.java  Strings.java
java/example/app/src/main/java/org/flight/: CrewMember.java  Flight.java  Passenger.java
java/example/app/src/main/java/org/product/: Product.java
java/example/app/src/main/java/org/reward/: RewardConversionService.java  RewardInformation.java
java/example/app/src/test/java/org/example/: AppTest.java
java/example/app/src/test/java/org/reward/: DynamicTests.java  Reward1ByDiscountServiceTest.java  Reward2InstanceTest.java  Reward3ByDiscountServiceNestedTest.java  Reward4GiftServiceTest.java
java/gradle/app/: build.gradle
java/selenium/: AssertDownloadsTitleTest.java
ll_projects/c_mem_manage/pointers/: casting.c  casting.h  string.c
ll_projects/interpreter/src/: lib.rs
ll_projects/tcp/: echo
my_stuff/interpreter_jonhoo/: Cargo.toml  Makefile
my_stuff/interpreter_jonhoo/src/: main.rs
my_stuff/tcp/: Makefile  echo.c
my_stuff/tcp_tsoding/: listen  listen.c
my_stuff/teej_c/: main.c
my_stuff/teej_c/basics/: func.c  func.h
my_stuff/teej_c/enums/: enums.h
my_stuff/teej_c/pointers/: cast  main.c  main.h  smart_append.c  structs.c
my_stuff/teej_c/structs/: struct.c  struct.h
python/debug/: Dockerfile  get_invest.py  run.sh
rust/interpreter_rs/: README.md
(+21 files in other folders)
