[package]
name = "interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.20", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.38"                             # error handling
